# yarex

./: .gitignore  Cargo.toml  README.md
crates/core/: main.rs  utility.rs
crates/core/reader/: files.rs  mod.rs
crates/drive/: Cargo.toml  README.md
crates/drive/examples/: drive_type.rs  file_offset.rs
crates/drive/src/: lib.rs
crates/drive/src/windows/: ioctl.rs  mod.rs  wmi.rs
crates/steam/: Cargo.toml  LICENSE  README.md
crates/steam/examples/: installed_games.rs
crates/steam/src/: lib.rs  vdf.rs
crates/stingray/: Cargo.toml  README.md
crates/stingray/src/: bundle.rs  error.rs  hash.rs  lib.rs  reader.rs  utility.rs
crates/stingray/src/file/: bones.rs  lua.rs  macros.rs  mod.rs  strings.rs  texture.rs  wwise_dep.rs
